--- a/index.html
+++ b/index.html
@@ -237,7 +237,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>passgle</h1>
+                  <h1>passgle</h1>
+        <h3>パスワードを解読...</h3>
         
         <div class="input-section">
             <input type="text" id="passwordInput" placeholder="000000" maxlength="6" pattern="[0-9]{6}">
