--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>パスワードを解読...</h1>
+        <h1>パスワードを解く...</h1>
         
         <div class="input-section">
             <input type="text" id="passwordInput" placeholder="000000" maxlength="6" pattern="[0-9]{6}">
